# cruxpass.py

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: workflow.yml
src/cruxpass/: __init__.py  _async_client.py  _client.py  _core.py  _version.py
tests/: test_client.py  test_openapi_contract.py
tests/fixtures/: openapi-schema.json
