[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cruxpass"
version = "0.0.1"
description = "Python client for the CruxPass API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "CruxPass", email = "admin@cruxpass.com" },
]
keywords = ["calendar", "ics", "feeds", "cruxpass"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.31",
]

[project.urls]
Homepage = "https://cruxpass.com"
Repository = "https://github.com/cruxpass/cruxpass.py"
Issues = "https://github.com/cruxpass/cruxpass.py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cruxpass"]
