[build-system]
requires = ["uv_build>=0.9.18,<0.10"]
build-backend = "uv_build"

[project]
name = "cruxpass"
version = "0.0.4"
description = "Python client for the CruxPass API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "CruxPass", email = "admin@cruxpass.com" },
]
keywords = ["calendar", "ics", "feeds", "cruxpass"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28",
]

[project.urls]
Homepage = "https://cruxpass.com"
Repository = "https://github.com/cruxpass/cruxpass.py"
Issues = "https://github.com/cruxpass/cruxpass.py/issues"
Changelog = "https://github.com/cruxpass/cruxpass.py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "ruff>=0.15,<0.16",
  "ty>=0.0.56,<0.1",
]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
